2011-04-28  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        EWS Bubbles should show commit-queue position when patch is in the commit-queue
        https://bugs.webkit.org/show_bug.cgi?id=59744

        This was actually just a 2 line change to statusbubble.py.
        I also cleaned up statusbubble.html a little while I was there
        (the links are now actual <a> tags and have hover).

        * QueueStatusServer/handlers/statusbubble.py:
        * QueueStatusServer/templates/statusbubble.html:

2011-04-28  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Eric Seidel.

        add a mac leopard release NRWT bot
        https://bugs.webkit.org/show_bug.cgi?id=59733

        * BuildSlaveSupport/build.webkit.org-config/config.json:

2011-04-28  Ojan Vafai  <ojan@chromium.org>

        Avoid crashing when running new-run-webkit-tests outside of
        version control.

        * Scripts/webkitpy/layout_tests/layout_package/manager.py:

2011-04-28  Xan Lopez  <xlopez@igalia.com>

        Unreviewed build fix.

        * GNUmakefile.am:

2011-04-28  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        fix python printing test
        https://bugs.webkit.org/show_bug.cgi?id=59719

        Now that we run scm commands in summarize_results, --verbose prints
        debug logging to stderr.

        * Scripts/webkitpy/layout_tests/layout_package/printing_unittest.py:

2011-04-28  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Tony Chang.

        link to tests at a specific revision in the results.html file
        https://bugs.webkit.org/show_bug.cgi?id=59711

        * Scripts/webkitpy/common/checkout/scm.py:
        Add a method to get the head svn revision.
        * Scripts/webkitpy/common/checkout/scm_unittest.py:
        * Scripts/webkitpy/layout_tests/layout_package/manager.py:
        Include the svn revision in the results json.

2011-04-28  Carlos Garcia Campos  <cgarcia@igalia.com>
