@@ -1,3 +1,3 @@
 <form name="submit_to_ews" enctype="multipart/form-data" method="post">
-Attachment id of patch to submit: <input name="attachment_id"><input type="submit" value="Submit for EWS Processing"></div>
+Attachment id of patch to submit: <input name="attachment_id"><input type="submit" value="Submit for EWS Processing">
 </form>
