@@ -2,6 +2,18 @@
 
         Reviewed by Adam Barth.
 
+        EWS bubbles should show "submit to ews" button if they've not been processed
+        https://bugs.webkit.org/show_bug.cgi?id=59751
+
+        * QueueStatusServer/handlers/statusbubble.py:
+        * QueueStatusServer/handlers/submittoews.py:
+        * QueueStatusServer/templates/statusbubble.html:
+        * QueueStatusServer/templates/submittoews.html:
+
+2011-04-28  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Adam Barth.
+
         EWS Bubbles should show commit-queue position when patch is in the commit-queue
         https://bugs.webkit.org/show_bug.cgi?id=59744
 
